--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,58 +1,83 @@
+Version 0.5.0 (August 21, 2010):
+ * Feature #2033: Implement hash commands: HSET, HGET, HDEL, HEXISTS, HLEN, HKEYS, HVALS, HGETALL, HMSET, HINCRBY, HMGET, HSETNX
+ * Feature #2035: Hash object
+ * Feature #2036: Transactions. Implement MULTI, EXEC, DISCARD
+ * Feature #2037: Publish/Subscribe. Implement SUBSCRIBE, UNSUBSCRIBE, PUBLISH
+ * Feature #1955: Multiple instance manager
+ * Feature #2325: Autoloader
+ * Feature #2028: Implement BLPOP and BRPOP
+ * Feature #2342: Implement SETEX
+ * Feature #3444: Implement APPEND
+ * Feature #3445: Implement SUBSTR
+ * Feature #3446: Implement CONFIG
+ * Feature #3526: Implement MONITOR
+ * Feature #3621: PhpDoc documentaion
+ * Improvement #2405: New serialzier. 'phpSerialize' and 'json' adapters. Rediska now can't serialize strings.
+ * Improvement #3199: Refactor commands
+ * Improvement #3246: Add read timeout to connection
+ * Improvement #3248: Add pushTo argument to pop method of List object
+ * Improvement #3250: Method generator for IDE autocomplete and phpDoc
+ * Improvement #3199: Refactor commands
+ * Bug #2812: Bad assignation in Rediska_Key_Abstract::setName
+ * Bug #3017: Fix cache multiload
+ * Bug #3442: Disconnect on destruct break persistent connection
+ * Bug #3547: Rediska_Key_SortedSet::union does not work properly
+
 Version 0.4.2 (April 21, 2010):
- * Features #2236: Add Redis server version specification (added 'redisVersion' option)
- * Features #2029: Implement ZRANK and ZREVRANK
- * Features #2030: Implement WITHSCORES argument for ZRANGEBYSCORE
- * Features #2031: Implement ZREMRANGEBYRANK
- * Features #2032: Implement ZUNION and ZINTER
- * Features #2195: Implement SORT command as standalone
- * Improvements #2233: Refactor configuration of test suite (now requires Zend Framework)
- * Improvements #2314: Deprecate SORT attributes in GetList and GetSet
- * Bugs #2197: Limit and offset broke inverted selects (arguments changed for 'getList', 'getSortedSet', 'truncateList', 'getFromSortedSetByScore)
- * Bugs #2290: If sessions set is empty trown exception
- * Bugs #2321: Null lifetime not supported in cache backend
+ * Feature #2236: Add Redis server version specification (added 'redisVersion' option)
+ * Feature #2029: Implement ZRANK and ZREVRANK
+ * Feature #2030: Implement WITHSCORES argument for ZRANGEBYSCORE
+ * Feature #2031: Implement ZREMRANGEBYRANK
+ * Feature #2032: Implement ZUNION and ZINTER
+ * Feature #2195: Implement SORT command as standalone
+ * Improvement #2233: Refactor configuration of test suite (now requires Zend Framework)
+ * Improvement #2314: Deprecate SORT attributes in GetList and GetSet
+ * Bug #2197: Limit and offset broke inverted selects (arguments changed for 'getList', 'getSortedSet', 'truncateList', 'getFromSortedSetByScore)
+ * Bug #2290: If sessions set is empty trown exception
+ * Bug #2321: Null lifetime not supported in cache backend
 
 Version 0.4.0 (April 1, 2010):
-  * Features #583: Create expample application
-  * Features #766: Create pear package
-  * Features #1926: Symfony integration
-  * Features #591: Implement BGREWRITEAOF
-  * Features #594: Implement ZINCRBY
-  * Features #802: Implement ZREMRANGEBYSCORE
-  * Features #803: Implement slaveof no one
-  * Features #902: Add README and CHANGELOG
-  * Improvements #760: Optimize consistent hashing
-  * Improvements #763: Move to stream_socket_client
-  * Improvements #797: Add timeout for connection
-  * Improvements #582: Specify connection alias for key objects
-  * Improvements #640: Add with scores to ZRANGE
-  * Improvements #675: Throw exceptions if empty arguments
-  * Improvements #835: On method can get connection object
-  * Improvements #581: Add multiple values to set and list by pipeline
-  * Improvements #595: Add getScoreFromSortedSet to sorted set object
-  * Improvements #765: New test suite
-  * Improvements #794: Add EXPIREAT
-  * Bugs #641: Broken RPOPLPUSH command
-  * Bugs #648: Add increment and decrement to rediska key wrapper
-  * Bugs #669: Create exception if connection not found
-  * Bugs #670: Warning: Invalid argument supplied for foreach() in .../library/Rediska/Command/Abstract.php on line 128 (111)
-  * Bugs #813: Quit must disconnect connections
-  * Bugs #825: Save Handler throw exception on Rediska options
+  * Feature #583: Create expample application
+  * Feature #766: Create pear package
+  * Feature #1926: Symfony integration
+  * Feature #591: Implement BGREWRITEAOF
+  * Feature #594: Implement ZINCRBY
+  * Feature #802: Implement ZREMRANGEBYSCORE
+  * Feature #803: Implement slaveof no one
+  * Feature #902: Add README and CHANGELOG
+  * Improvement #760: Optimize consistent hashing
+  * Improvement #763: Move to stream_socket_client
+  * Improvement #797: Add timeout for connection
+  * Improvement #582: Specify connection alias for key objects
+  * Improvement #640: Add with scores to ZRANGE
+  * Improvement #675: Throw exceptions if empty arguments
+  * Improvement #835: On method can get connection object
+  * Improvement #581: Add multiple values to set and list by pipeline
+  * Improvement #595: Add getScoreFromSortedSet to sorted set object
+  * Improvement #765: New test suite
+  * Improvement #794: Add EXPIREAT
+  * Bug #641: Broken RPOPLPUSH command
+  * Bug #648: Add increment and decrement to rediska key wrapper
+  * Bug #669: Create exception if connection not found
+  * Bug #670: Warning: Invalid argument supplied for foreach() in .../library/Rediska/Command/Abstract.php on line 128 (111)
+  * Bug #813: Quit must disconnect connections
+  * Bug #825: Save Handler throw exception on Rediska options
 
 Version 0.3.0 (January 22, 2010)
-  * Features #355: Alias for servers
-  * Features #356: Operate with keys on specified (by alias) server
-  * Features #471: Documentation
-  * Features #472: Pipeline
-  * Improvements #520: Refactor commands
-  * Improvements #521: Support Redis 1.2 API
-  * Improvements #522: Lazy loading command classes
-  * Bugs #524: Messages count return queues count
-  * Bugs #559: Select specified db after connect
+  * Feature #355: Alias for servers
+  * Feature #356: Operate with keys on specified (by alias) server
+  * Feature #471: Documentation
+  * Feature #472: Pipeline
+  * Improvement #520: Refactor commands
+  * Improvement #521: Support Redis 1.2 API
+  * Improvement #522: Lazy loading command classes
+  * Bug #524: Messages count return queues count
+  * Bug #559: Select specified db after connect
 
 Version 0.2.2 (November 27, 2009)
- * Features #577: Persistent connection
- * Features #578: Move to BSD license
+ * Feature #577: Persistent connection
+ * Feature #578: Move to BSD license
 
 Version 0.2.1 (November 25, 2009)
- * Features #363: Writer for Zend_Log
- * Features #364: Adapter for Zend_Queue
+ * Feature #363: Writer for Zend_Log
+ * Feature #364: Adapter for Zend_Queue
